--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Let's make it a bit cloudy
+subtitle: A blog about a jurney towards Virtual Workplace
 ---
