--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Let's make it a bit cloudy
+title: Keepin' it Cloudy
 subtitle: A blog about a jurney towards Virtual Workplace
 ---
