blog post - update

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Keepin' it Cloudy
-subtitle: A blog about a jurney towards Virtual Workplace
+subtitle: A blog about a journey towards Virtual Workplace
 ---
